adding demo of testng xml files and threading